
[metadata]
name = YiriCalculator
author = 忘忧北萱草
author-email = wybxc@qq.com
summary = awsome project created by pycman.
license = MIT
description-file = 
    README.rst
home-page = http://github.com/Wybxc/YiriCalculator
requires-python = >= 3.6

[files]
packages = 
    YiriCalculator


[entry_points]
console_scripts =
    cmd=package.module:function
